Kioo Media Player v1.15 - 15th March, 2019
-------------------------------------------------
* Added Network Live Streaming Playback Option
* Upgraded FFMPEG
* Bug fixes in underlaying engine
* Subtitles now support colors
* Fixed Playlist alignement problem
* Bug fixes on Opening file and dropping file

Kioo Media Player v1.14 - 10th October, 2018
-------------------------------------------------
* Fix playlist problem on drop after player started
* Fixed Volume Slider issue, was flipping between 1 and 0 on mouse wheel
* Subtitles enabled and disabled now working perfectly

Kioo Media Player v1.13 - 10th October, 2018
-------------------------------------------------
* Fix playlist problem on drop after player started
* Fixed Volume Slider issue, was flipping between 1 and 0 on mouse wheel

Kioo Media Player v1.13 - 15th July, 2018
-------------------------------------------------
* Enabled antialising in video output
* Improved multiple files handling capability for the player
* Fixed subtitle lines repetition bugs in embeded subs.
* Various performance improvement

Kioo Media Player v1.12 - 28th April, 2018
-------------------------------------------------
* Added Linux ScreenSaver Inhibit Code
* Initial Binary for Linux
* Implimented the new OpenSubtitles REST API, no more xml
* Various performance improvements
* Pause on Right Mouse Button instead of Left Mouse Button

Kioo Media Player v1.11 - 2nd February, 2018
-------------------------------------------------
* Turn back to opengl=true
* Set codec mode to ZeroCopy

Kioo Media Player v1.10 - 24th November, 2017
-------------------------------------------------
* Reduced size of the font and and bottom margin of the subtitles
* Added 64 bit variaty of the player
* Removed the orientation property on the subtitle
* Added bold to subtitles
* Dirty Fix for downloading subtitles in opesubtitles.org

Kioo Media Player v1.9 [RC] - 27th August, 2017
-------------------------------------------------