@@ -6,6 +6,7 @@ Kioo Media Player v1.15 - 15th March, 2019
 * Subtitles now support colors
 * Fixed Playlist alignement problem
 * Bug fixes on Opening file and dropping file
+* Fixed slider jumping to and from fast when seeking
 
 Kioo Media Player v1.14 - 10th October, 2018
 -------------------------------------------------
